src/test/resources/tests/typeError/treeSetWithUncomparableType.qg

init {
    set = treeSet(:List<number>)
}

run true

input(a,b) true